assets/css/layout.css
* {margin: 0; padding: 0; outline: none;}

.header{
    margin: auto;
    max-width: 1200px; 
    padding: 10px;
}
.contentWallTitle{
    text-align: center;
    margin:auto;
    padding-block-end: 30px;
}

footer{
    background-color: #490499;
    color: #ffffff;
    line-height: 1.6rem;
    padding: 10px;
}
.splash { 
    grid-area: splash; 
    background-color: rgba(0, 0, 0, 0.6);
    padding: 10%;      
}
.splash p{
    font-size: 1.25rem;
}
.sections { 
    grid-area: sections;
    background-color: #490499; 
    font-weight: 700;
}
.volunteer { 
    grid-area: volunteer;
    background-color: #000000;
    font-weight: 700 ;
}
.Contact-Group { 
    grid-area: contactGroup;
}
.Contact-Sections { 
    grid-area: contactSections;
}
.Websites { 
    grid-area: websites;
}

.top-area{
    background-image: url("../images/beavers-in-woods.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    vertical-align: auto;
    padding-top: 2%;
    padding-bottom: 2%;
}

.grid-container {
    display: grid;
    margin: auto;
    grid-template-columns: auto;
    grid-template-areas:
        'splash'
        'sections'
        'volunteer';
    padding: 2%;
}
.contentWall {
    background: #ffffff;
    column-count: 1;
    padding-left: 2%;
    padding-right: 2%;
    padding-bottom: 10px;
    column-gap: 2%;
    margin-left: auto;
    padding-block-end: 30px;
}
.contentBrick {
    background: #f0f0f0;
    break-inside: avoid;
    font-weight:400;
    padding-left:0%;
    padding-right:0%;
    padding-block-end: 2%; 
    margin-bottom: 5%;
}
.contentBrick h5{
    padding-block-start: 2%; 
}
.contentBrick p, h5{
    padding-left:5%;
    padding-right:5%;
}

.contentBrick img{
    width:100%;
    padding: 0;
    margin: 0;
}

.grid-footer {
    display: grid;
    margin: auto;
    grid-template-columns: auto;
    grid-template-areas:
        'contactGroup' 
        'contactSections'
        'websites';
    padding: 10px;
}


/* Smartphones (landscape) ----------- */
@media (min-width : 576px) {
    /* Styles */
    .grid-container {
        grid-template-columns: auto auto;
        grid-template-areas:
            'splash splash'
            'sections volunteer';
    }
    .grid-footer {
        grid-template-columns: 50% 50%;
        grid-template-areas:
            'contactGroup contactSections'
            'websites contactSections';
    }
    .contentWall {
        column-count: 2;
    }
}
/* Tablet and above (landscape) ----------- */
@media (min-width : 955px) {
    /* Styles */
    .grid-container {
        max-width: 955px; 
        grid-template-columns: 66% auto;
        grid-template-areas:
            'splash sections'
            'splash volunteer';
    }
    .grid-footer {
        max-width: 1200px; 
        grid-template-columns: auto auto auto;
        grid-template-areas:
            'contactGroup contactSections websites';
    }
    .contentWall {
        column-count: 3;
        max-width: 1200px; 
    }
}

.grid-container > div {
    text-align: left;
    padding: auto;
    color: #ffffff;
}

.grid-footer > div {
    text-align: left;
    padding: 3%;
}
.top-area{
    width: 100%;
}

.table{
    width: 100%;
    margin:auto;
    border: #000000;
    border-width: 10px; 
    height: 100%;
}

td{
    height: 3rem;
}
td:nth-child(1) {
    width: 35%;
    text-align: right;
    font-weight: normal; 
}
td:nth-child(2) {
    width: auto;
    text-align: center;
    font-weight: normal; 
}
td:nth-child(3) {
    width: 55%;
    text-align: left;
    font-weight: normal; 
}
.footer-logo {
    padding-top: 15px;
    padding-bottom: 15px;
    display: block;
    margin-left: auto;
    margin-right: auto;
  }

